<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T5EditProfile">

    <ScrollView
        android:id="@+id/scrollView_editProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout_editProfile"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_editProfile_profileImage"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:layout_marginStart="10dp"
                        android:layout_width="150dp"
                        android:layout_height="150dp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editText_editProfile_nickName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="9"
                        android:maxLines="1"
                        android:layout_gravity="center_vertical" />

                    <ImageView
                        android:id="@+id/imageView_editProfile_checkNickName"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/ic_clear_black_24dp"
                        android:layout_marginEnd="5dp"
                        android:tag="False"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/textView_editProfile_nickNameCheck"
                    android:text="존재하는 닉네임입니다."
                    android:visibility="invisible"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/editText_editProfile_introduce"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:hint="Simple Introduce"
                    android:textSize="22sp"
                    android:layout_marginTop="15dp"
                    android:padding="15dp"
                    android:maxLines="3" />
            </LinearLayout>
            <TextView
                android:text="좋아하는 음식"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:columnCount="3">
                <CheckBox
                    android:id="@+id/checkBox1_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox2_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japanese"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox3_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chinese"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox4_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/western"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox5_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snacks"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox6_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desert"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox7_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asian"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox8_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch_box"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox9_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_food"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox10_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source"
                    android:layout_marginStart="10dp"
                    />
                <CheckBox
                    android:id="@+id/checkBox11_editProfile"
                    android:layout_columnWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extras"
                    android:layout_marginStart="10dp"
                    />
            </GridLayout>

            <Button
                android:id="@+id/button_editProfile_submit"
                android:text="수정완료"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout_editProfile_editImage"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>